# MyGO-API

./: .env  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-run.sh  pyproject.toml
mygo/: app.py
mygo/algo/: Levenshtein.py  __init__.py
mygo/models/: image.py  tags.py
mygo/routers/: mygo.py
mygo/routers/v1/: __init__.py  health.py
mygo/routers/v1/images/: __init__.py  detail.py  index.py  random.py  search.py
mygo/services/: get_pic.py  get_pic_list.py  get_pic_multikey.py  get_random_pic.py
mygo/static/: all_file.py  image_map.json  mygo.json
mygo/utils/: database.py
